# ShiftAgent

./: .commitlintrc.json  .cursorrules  .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  BUG_REPORT_find_shift_replacement.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  CONTRIBUTING.md  DEV_CONTAINER_GUIDE.md  DOCKER_MCP.md  Dockerfile  Dockerfile.mcp  Dockerfile.mcp-simple  Dockerfile.mcp.http  Dockerfile.mcp.sse  INFRASTRUCTURE.md  LICENSE  MCP_SERVER.md  Makefile  N8N_MCP_GUIDE.md  PDF_MIGRATION_GUIDE.md  README-uvx.md  README.md  SETUP_COMPLETE.sh  SYSTEM_SPECIFICATION.md  __init__.py  api-test.http  claude-desktop-mcp-config-http.json  claude-desktop-mcp-config.json  constraints.py  docker-compose.mcp.yml  docker-compose.n8n-final.yml  docker-compose.n8n.yml  docker-compose.prod.yml  docker-compose.yml  finalize-setup.sh  main.py  (+21 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.mcp  devcontainer-mcp.json  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
docs/: CONTAINER_REGISTRY.md  SOLVER_CONFIGURATION.md  SYSTEM_SPECIFICATION.md  mcp-employee-management-sequence.md  mcp-employee-management-sequence_jp.md
examples/: n8n-mcp-simple.json  n8n-mcp-workflow.json
infrastructure/: .gitignore  CONTAINER_APPS_ENVIRONMENT.md  MIGRATION_GUIDE.md  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  main.tf  outputs.tf  pyproject.toml  setup-remote-state.sh  validate_config.py  variables.tf  versions.tf
nginx/: nginx.conf
pages/: schedule_view.py
scripts/: docker_mcp.sh  generate-ssl-cert.sh  generate_html_report.py  init-db.sql  run-mcp-server.sh  run_mcp_http.py  run_mcp_sse.py  test-mcp-sse.sh  (+3 more)
(+138 files in other folders)
