[project]
name = "shift-scheduler"
version = "1.0.0"
description = "Employee shift scheduling using Timefold Solver"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "timefold>=1.14.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.8.0",
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.1",
    "cairocffi>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

# Console scriptsは削除（Makefileで代替）
# [project.scripts]
# serve = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# シンプルなhatchling設定
[tool.hatch.build.targets.wheel]
# ルートディレクトリのPythonファイルを含める
include = [
    "/*.py",
]

# 不要なファイルを除外
exclude = [
    ".devcontainer/",
    ".vscode/", 
    ".git/",
    "__pycache__/",
    ".pytest_cache/",
    "*.pyc",
    ".gitignore",
    "Dockerfile*",
    "docker-compose*.yml",
    "Makefile",
    "*.md",
    "*.sh",
    "api-test.http",
    "uv.lock"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false